Add new Features

--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 <p>this is local repo 
     to learn how to create local Repository
 </p> 
+
+<p>
+    apne feature1 ko edit kr rhe 
+    ab jb main pr wapas jayege to ye line main pr nhi dikheig kyuki ye edit apne ne feature 1 wli branch pe kiya 
+</p>
